--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>dropwizard-elk-appender</artifactId>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>3.0.0</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -23,7 +23,7 @@
         <connection>scm:git:https://github.com/kiwiproject/dropwizard-elk-appender.git</connection>
         <developerConnection>scm:git:git@github.com:kiwiproject/dropwizard-elk-appender.git</developerConnection>
         <url>https://github.com/kiwiproject/dropwizard-elk-appender</url>
-        <tag>HEAD</tag>
+        <tag>v3.0.0</tag>
     </scm>
 
     <properties>
